grammar.js
    source_file: ($) =>
      seq(
        repeat($._newline),
        optional(
          seq(
            $._instruction,
            repeat(seq(repeat1($._newline), $._instruction)),
            repeat($._newline),
          ),
        ),
      ),

    _instruction: ($) =>
      choice(
        $.from_instruction,
        $.run_instruction,
        $.cmd_instruction,
        $.label_instruction,
        $.expose_instruction,
        $.env_instruction,
        $.add_instruction,
        $.copy_instruction,
        $.entrypoint_instruction,
        $.volume_instruction,
        $.user_instruction,
        $.workdir_instruction,
        $.arg_instruction,
        $.onbuild_instruction,
        $.stopsignal_instruction,
        $.healthcheck_instruction,
        $.shell_instruction,
        $.maintainer_instruction,
        $.cross_build_instruction,
      ),

    from_instruction: ($) =>
      seq(
        alias(/[fF][rR][oO][mM]/, 'FROM'),
        optional($.param),
        $.image_spec,
        optional(seq(alias(/[aA][sS]/, 'AS'), field('as', $.image_alias))),
      ),

    run_instruction: ($) =>
      seq(
        alias(/[rR][uU][nN]/, 'RUN'),
        repeat(
          choice(
            $.param,
            $.mount_param,
          ),
        ),
        choice($.json_string_array, $.shell_command),
        repeat($.heredoc_block),
      ),

    cmd_instruction: ($) =>
      seq(
        alias(/[cC][mM][dD]/, 'CMD'),
        choice($.json_string_array, $.shell_command),
      ),

    expose_instruction: ($) =>
      seq(
        alias(/[eE][xX][pP][oO][sS][eE]/, 'EXPOSE'),
        repeat1(choice($.expose_port, $.expansion)),
      ),

    env_instruction: ($) =>
      seq(
        alias(/[eE][nN][vV]/, 'ENV'),
        choice(repeat1($.env_pair), alias($._spaced_env_pair, $.env_pair)),
      ),

    add_instruction: ($) =>
      seq(
        alias(/[aA][dD][dD]/, 'ADD'),
        repeat($.param),
        choice(
          $.json_string_array,
          seq(
            repeat1(
              seq(alias($.path_with_heredoc, $.path), $._non_newline_whitespace),
            ),
            alias($.path_with_heredoc, $.path),
            repeat($.heredoc_block),
          ),
        ),
      ),

    copy_instruction: ($) =>
      seq(
        alias(/[cC][oO][pP][yY]/, 'COPY'),
        repeat($.param),
        choice(
          $.json_string_array,
          seq(
            repeat1(
              seq(alias($.path_with_heredoc, $.path), $._non_newline_whitespace),
            ),
            alias($.path_with_heredoc, $.path),
            repeat($.heredoc_block),
          ),
        ),
      ),

    entrypoint_instruction: ($) =>
      seq(
        alias(/[eE][nN][tT][rR][yY][pP][oO][iI][nN][tT]/, 'ENTRYPOINT'),
        choice($.json_string_array, $.shell_command),
      ),

    arg_instruction: ($) =>
      seq(
        alias(/[aA][rR][gG]/, 'ARG'),
        repeat1(
          seq(
            $._non_newline_whitespace,
            $.arg_pair,
          ),
        ),
      ),

    healthcheck_instruction: ($) =>
      seq(
        alias(/[hH][eE][aA][lL][tT][hH][cC][hH][eE][cC][kK]/, 'HEALTHCHECK'),
        optional(
          choice(
            'NONE',
            seq(
              repeat($.param),
              choice(
                alias($._healthcheck_cmd_instruction, $.cmd_instruction),
                alias($._healthcheck_raw_command, $.shell_command),
              ),
            ),
          ),
        ),
      ),

    _healthcheck_cmd_instruction: ($) =>
      seq(
        alias(/[cC][mM][dD]/, 'CMD'),
        optional(choice($.json_string_array, $.shell_command)),
      ),

    _healthcheck_raw_command: ($) =>
      seq(
        $._healthcheck_raw_fragment,
        repeat(
          seq(
            alias($.required_line_continuation, $.line_continuation),
            repeat($._newline),
            $._shell_fragment,
          ),
        ),
      ),

    path: ($) =>
      seq(
        choice(
          /[^-\s\$<]/, // cannot start with a '-' to avoid conflicts with params
          /<[^<]/, // cannot start with a '<<' to avoid conflicts with heredocs (a single < is fine, though)
          $.expansion,
        ),
        repeat(choice(token.immediate(/[^\s\$]+/), $._immediate_expansion)),
      ),

    expansion: $ =>
      seq('$', $._expansion_body),

    // we have 2 rules b/c aliases don't work as expected on seq() directly
    _immediate_expansion: $ => alias($._imm_expansion, $.expansion),
    _expansion_body: $ =>
      choice(
        $.variable,
        seq(
          token.immediate('{'),
          alias(token.immediate(/[^\}]+/), $.variable),
          token.immediate('}'),
        ),
      ),

    variable: () => token.immediate(/[a-zA-Z_][a-zA-Z0-9_]*/),

    env_pair: ($) =>
      seq(
        field('name', $._env_key),
        token.immediate('='),
        optional(
          field('value', $._env_assignment_value),
        ),
      ),

    _env_assignment_value: ($) =>
      choice(
        $.double_quoted_string,
        $._env_single_quoted_string_with_trailing_quote,
        $.unquoted_string,
      ),

    _spaced_env_pair: ($) =>
      seq(
        field('name', $._env_key),
        choice(
          seq(
            token.immediate(/\s+/),
            field('value',
              choice(
                $.double_quoted_string,
                $.single_quoted_string,
                alias($._spaced_env_value, $.unquoted_string),
              )),
          ),
          field('value', alias($._continued_spaced_env_value, $.unquoted_string)),
        ),
      ),

    _env_key: ($) =>
      alias(/[a-zA-Z_][a-zA-Z0-9_]*/, $.unquoted_string),

    expose_port: () => seq(/\d+(-\d+)?/, optional(choice('/tcp', '/udp'))),

    image_spec: ($) =>
      seq(
        field('name', $.image_name),
        field('tag', optional($.image_tag)),
        field('digest', optional($.image_digest)),
      ),

    image_name: ($) =>
      seq(
        choice(/[^@:\s\$-]/, $.expansion),
        repeat(choice(token.immediate(/[^@:\s\$]+/), $._immediate_expansion)),
      ),

    image_tag: ($) =>
      seq(
        token.immediate(':'),
        repeat1(choice(token.immediate(/[^@\s\$]+/), $._immediate_expansion)),
      ),

    image_digest: ($) =>
      seq(
        token.immediate('@'),
        repeat1(choice(token.immediate(/[a-zA-Z0-9:]+/), $._immediate_expansion)),
      ),

    // Generic parsing of options passed right after an instruction name.
    param: () =>
      seq(
        '--',
        field('name', token.immediate(/[a-z][-a-z]*/)),
        optional(
          seq(
            token.immediate('='),
            field('value', token.immediate(/[^\s]+/)),
          ),
        ),
      ),

    // Specific parsing of the --mount option e.g.
    //
    //   --mount=type=cache,target=/root/.cache/go-build
    //
    image_alias: ($) => seq(
      choice(/[-a-zA-Z0-9_]+/, $.expansion),
      repeat(choice(token.immediate(/[-a-zA-Z0-9_]+/), $._immediate_expansion)),
    ),

    shell_command: ($) =>
      seq(
        $._shell_fragment,
        repeat(
          seq(
            alias($.required_line_continuation, $.line_continuation),
            repeat($._newline),
            $._shell_fragment,
          ),
        ),
      ),

    _shell_fragment: ($) => repeat1(
      $._shell_fragment_atom,
    ),

    json_string_array: ($) =>
      seq(
        '[',
        optional(
          seq($.json_string, repeat(seq(',', $.json_string))),
        ),
        ']',
      ),

    // Note that JSON strings are different from the other double-quoted
    // strings. They don't support $-expansions.
    // Convenient reference: https://www.json.org/
    json_string: ($) => seq(
      '"',
      repeat(
        choice(
          token.immediate(/[^"\\`\n]+/),
          alias($.json_escape_sequence, $.escape_sequence),
          token.immediate('`'),
        ),
      ),
      '"',
    ),

    double_quoted_string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(/[^"\n\\`\$]+/),
            alias($.double_quoted_escape_sequence, $.escape_sequence),
            token.immediate(/\$\(/),
            '\\',
            '`',
            $._immediate_expansion,
          ),
        ),
        '"',
      ),

    // same as double_quoted_string but without $-expansions:
    single_quoted_string: ($) =>
      seq(
        '\'',
        repeat(
          choice(
            token.immediate(/[^'\n\\`]+/),
            alias($.single_quoted_escape_sequence, $.escape_sequence),
            '\\',
            '`',
          ),
        ),
        '\'',
      ),

    unquoted_string: ($) =>
      repeat1(
        choice(
          token.immediate(/[^\s\n\"'\\`\$]+/),
          token.immediate(/[\\`] /),
          token.immediate(/[\\`][^\s\n]/),
          $._immediate_expansion,
        ),
      ),

    _non_newline_whitespace: () => token.immediate(/[\t ]+/),
  },
});
