test/corpus/arg.txt
==================
No default
==================

ARG test

---

(source_file
	(arg_instruction
		name: (unquoted_string)))

==================
With default
==================

ARG foo=bar

---

(source_file
	(arg_instruction
		name: (unquoted_string)
		default: (unquoted_string)))
		

==================
With quoted default
==================

ARG foo="bar"

---

(source_file
	(arg_instruction
		name: (unquoted_string)
		default: (double_quoted_string)))

==================
No space after keyword
==================

ARGfoo

---

(source_file
	(ERROR))

==================
No newline after keyword
==================

ARG
foo

---

(source_file
	(ERROR))
