test/corpus/cmd.txt
==================
Shell command
==================

CMD echo "test"

---

(source_file
  (cmd_instruction
    (shell_command)))

==================
Shell command multiline
==================

CMD echo "test" \
	"foo" \
	bar


---

(source_file
  (cmd_instruction
    (shell_command
      (line_continuation)
      (line_continuation))))

==================
Cmd with empty JSON array
==================

cmd []

---

(source_file
  (cmd_instruction
    (json_string_array)))

==================
Cmd with JSON array
==================

cmd ["echo", "test"]

---

(source_file
  (cmd_instruction
    (json_string_array
      (json_string)
      (json_string))))

==================
Cmd with multiline JSON array
==================

CMD ["echo", \
  "ok"]

---

(source_file
  (cmd_instruction
    (json_string_array
      (json_string)
      (line_continuation)
      (json_string))))

==================
Cmd falls back for invalid JSON exec array
==================

CMD ['echo','single quotes are invalid JSON']

---

(source_file
  (cmd_instruction
    (shell_command)))
