test/corpus/copy.txt
==================
No param
==================

COPY /src ./dst

---

(source_file
	(copy_instruction
		(path)
		(path)))

==================
With param
==================

COPY --chown=a:b /src ./dst

---

(source_file
	(copy_instruction
		(param)
		(path)
		(path)))

==================
Multiple files
==================

COPY src1 src2 dst

---

(source_file
  (copy_instruction
    (path)
    (path)
    (path)))

==================
Multiple params
==================

COPY --chown=a:b --chmod=644 src dst

---

(source_file
  (copy_instruction
    (param)
    (param)
    (path)
    (path)))

==================
Params without argument
==================

COPY --link src dst

---

(source_file
  (copy_instruction
    (param)
    (path)
    (path)))

==================
JSON array
==================

COPY [ "test file", "/tmp" ]
COPY --chmod=0644 [ "test file", "/tmp/test file" ]

---

(source_file
  (copy_instruction
    (json_string_array
      (json_string)
      (json_string)))
  (copy_instruction
    (param)
    (json_string_array
      (json_string)
      (json_string))))

==================
End-of-options separator
==================

COPY -- a.txt /app/
COPY --chown=1000:1000 -- b.txt /app/

---

(source_file
  (copy_instruction
    (end_of_options)
    (path)
    (path))
  (copy_instruction
    (param)
    (end_of_options)
    (path)
    (path)))

==================
End-of-options allows dash-prefixed paths
==================

COPY -- -src.txt /app/
ADD -- -archive.tar /dest/

---

(source_file
  (copy_instruction
    (end_of_options)
    (path)
    (path))
  (add_instruction
    (end_of_options)
    (path)
    (path)))
