test/corpus/entrypoint.txt
==================
Shell command
==================

ENTRYPOINT echo "test"

---

(source_file
  (entrypoint_instruction
    (shell_command)))

==================
Entrypoint Shell command multiline
==================

ENTRYPOINT echo "test" \
	"foo" \
	bar


---

(source_file
  (entrypoint_instruction
    (shell_command
      (line_continuation)
      (line_continuation))))

==================
Entrypoint exec form, empty array
==================

ENTRYPOINT []

---

(source_file
  (entrypoint_instruction
    (json_string_array)))

==================
Entrypoint exec form
==================

ENTRYPOINT ["echo", "test"]

---

(source_file
  (entrypoint_instruction
    (json_string_array
      (json_string)
      (json_string))))
