test/corpus/env.txt
================================================================================
Quoted value
================================================================================

ENV TEST="okay"

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))))

================================================================================
Unquoted value
================================================================================

ENV TEST_2=value\ 2

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

=========================================================
Single-letter variable
=========================================================

ENV X=42

---

(source_file
  (env_instruction
    (env_pair
      (unquoted_string)
      (unquoted_string))))

================================================================================
keys can begin or end with underscores
================================================================================

ENV _TEST="foo" TEST__=bar

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Multiple
================================================================================

ENV TEST="foo" TEST_2=foo\ bar

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Multiline
================================================================================

ENV TEST1="foo" \
	TEST2=bar

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))
    (line_continuation)
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Multiple instructions
================================================================================

ENV TEST1="foo" 
ENV TEST2="bar" 

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string)))
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))))

================================================================================
Space syntax
================================================================================

ENV TEST1 foo

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Space syntax 2
================================================================================

ENV TZ America/Toronto

--------------------------------------------------------------------------------

(source_file
	(env_instruction
		(env_pair
			name: (unquoted_string)
			value: (unquoted_string))))

================================================================================
Comment immediately after continuation
================================================================================

ENV \
	# Where do you live?
	TZ America/Toronto

--------------------------------------------------------------------------------

(source_file
	(env_instruction
		(line_continuation)
		(comment)
		(env_pair
			name: (unquoted_string)
			value: (unquoted_string))))

================================================================================
Space syntax where value has spaces
================================================================================

ENV BUILD_PACKAGES bash curl

--------------------------------------------------------------------------------

(source_file
	(env_instruction
		(env_pair
			name: (unquoted_string)
			value: (unquoted_string))))

================================================================================
Space syntax where value has spaces and multiple lines
================================================================================

ENV BUILD_PACKAGES bash curl \
  openssl \
  tar xz gcc python

--------------------------------------------------------------------------------

(source_file
	(env_instruction
		(env_pair
			name: (unquoted_string)
			value: (unquoted_string
				(line_continuation)
				(line_continuation)))))

================================================================================
Space syntax where value starts after a line continuation
================================================================================

ENV GOPATH \
\go

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string
        (line_continuation)))))

================================================================================
Windows path value
================================================================================

ENV TEMP=C:\Temp

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Single quotes are fully literal
================================================================================

ENV name='a\b'
ENV path='C:\Users\'

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (single_quoted_string)))
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (single_quoted_string))))

================================================================================
Space syntax Windows path value
================================================================================

ENV TEMP C:\Temp

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Double quoted command substitution literal
================================================================================

ENV CMAKE_PREFIX_PATH="$(dirname $(which conda))/../"

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))))

================================================================================
Double quoted command substitution preserves nested expansion
================================================================================

ENV TEST="$(echo $VALUE)"

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string
        (expansion
          (variable))))))

================================================================================
Backslash before dollar in double-quoted value
================================================================================

ENV A="x\$HOME"

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string
        (expansion
          (variable))))))

================================================================================
Literal dollar not forming an expansion
================================================================================

ENV PRICE=$5
ENV A=cost:$5.00
ENV B=cost$

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string)))
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string)))
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Adjacent quoted and unquoted segments concatenate
================================================================================

ENV K=pre"mid"post

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string)
      value: (double_quoted_string)
      value: (unquoted_string))))

================================================================================
Legacy space form keeps a mid-line quote literal
================================================================================

ENV GREETING hello "world"

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Trailing and bare literal dollar
================================================================================

ENV PRICE=cost$ BARE=$

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))
    (env_pair
      name: (unquoted_string)
      value: (unquoted_string))))

================================================================================
Literal dollar inside double quotes
================================================================================

ENV PRICE="$5"
ENV NOTE="cost$"

--------------------------------------------------------------------------------

(source_file
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string)))
  (env_instruction
    (env_pair
      name: (unquoted_string)
      value: (double_quoted_string))))
