test/corpus/expose.txt
==================
Single port
==================

EXPOSE 80


---

(source_file
	(expose_instruction
		(expose_port)))

==================
Multiple ports
==================

EXPOSE 80 90/tcp 100/udp


---

(source_file
	(expose_instruction
		(expose_port)
		(expose_port)
		(expose_port)))

==================
Port range
==================

EXPOSE 9009-9010


---

(source_file
	(expose_instruction
		(expose_port)))

==================
SCTP protocol
==================

EXPOSE 80/sctp

---

(source_file
  (expose_instruction
    (expose_port)))

==================
Uppercase protocol
==================

EXPOSE 80/TCP

---

(source_file
  (expose_instruction
    (expose_port)))

==================
Variable port with protocol
==================

EXPOSE $PORT/tcp

---

(source_file
  (expose_instruction
    (expose_port
      (expansion
        (variable)))))

==================
Invalid protocol is rejected
==================

EXPOSE 80/http

---

(source_file
  (expose_instruction
    (expose_port))
  (ERROR))
