test/corpus/from.txt
==================
Only image
==================

FROM testimage

---

(source_file
  (from_instruction
    (image_spec
      name: (image_name))))

==================
Image with tag
==================

FROM testimage:tag

---

(source_file
  (from_instruction
    (image_spec
      name: (image_name)
      tag: (image_tag))))

==================
Image with digest
==================

FROM testimage@sha256:skgshlshg

---

(source_file
  (from_instruction
    (image_spec
      name: (image_name)
      digest: (image_digest))))

==================
Image with tag and digest
==================

FROM testimage:tag@sha256:452525

---

(source_file
  (from_instruction
    (image_spec
      name: (image_name)
      tag: (image_tag)
      digest: (image_digest))))

==================
Tag and digest with as
==================

FROM sourcegraph/alpine:3.12@sha256:ce099fbcd3cf70b338fc4cb2a4e1fa9ae847de21afdb0a849a393b87d94fb174 AS monitoring_builder

---

(source_file
  (from_instruction
    (image_spec
      name: (image_name)
      tag: (image_tag)
      digest: (image_digest))
    as: (image_alias)))

==================
From with param
==================

FROM --platform=linux/arm64 alpine-${VERSION}-z

---

(source_file
  (from_instruction
    (param)
    (image_spec
      (image_name
        (expansion
          (variable))))))

======================================================
No spaces in image name
======================================================

FROM a b c

---

(source_file
  (from_instruction
    (image_spec
      (image_name)))
  (ERROR))

======================================================
No spaces in image name before expansion
======================================================

FROM a $b

---

(source_file
  (from_instruction
    (ERROR)
    (image_spec
      (image_name
        (expansion
          (variable))))))

======================================================
No spaces in image name expansion
======================================================

FROM $ X

---

(source_file
  (ERROR))

======================================================
No spaces in image tag expansion
======================================================

FROM a: $B

---

(source_file
  (from_instruction
    (ERROR
      (image_name))
    (image_spec
      (image_name
        (expansion
          (variable))))))

======================================================
No spaces in image digest
======================================================

FROM a:b@ $c

---

(source_file
  (from_instruction
    (image_spec
      (image_name)
      (image_tag)))
  (ERROR))

======================================================
No spaces in image alias
======================================================

FROM a AS b c

---

(source_file
  (from_instruction
    (image_spec
      (image_name))
    (image_alias))
  (ERROR))

======================================================
Image alias with expansion
======================================================

FROM a AS b$C

---

(source_file
  (from_instruction
    (image_spec
      name: (image_name))
    as: (image_alias
      (expansion
        (variable)))))

==================
Stage name with dot
==================

FROM alpine AS my.stage

---

(source_file
  (from_instruction
    (image_spec
      name: (image_name))
    as: (image_alias)))

==================
Platform flag with expansion
==================

FROM --platform=$BUILDPLATFORM alpine

---

(source_file
  (from_instruction
    (param
      value: (expansion
        (variable)))
    (image_spec
      name: (image_name))))

==================
Registry with port
==================

FROM registry.example.com:5000/team/app:1.0

---

(source_file
  (from_instruction
    (image_spec
      name: (image_name)
      tag: (image_tag))))

==================
Registry with variable port
==================

FROM registry:${PORT}/myimage

---

(source_file
  (from_instruction
    (image_spec
      name: (image_name))))
