test/corpus/healthcheck.txt
==================
None
==================

HEALTHCHECK NONE

---

(source_file
  (healthcheck_instruction))

==================
Custom command
==================

HEALTHCHECK CMD	echo "test"

---

(source_file
  (healthcheck_instruction
    (cmd_instruction
      (shell_command))))

==================
With options
==================

HEALTHCHECK --interval=10s --retries=10 CMD echo "test"

---

(source_file
  (healthcheck_instruction
    (param)
    (param)
    (cmd_instruction
      (shell_command))))
